--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 --- #YAML:1.0
 name:               Statistics-QuickMedian
-version:            0.01
-abstract:           The great new Statistics::QuickMedian!
+version:            0.02
+abstract:           Parition-based median estimator
 author:
     - Jimi Wills <jimi@webu.co.uk>
 license:            Artistic_2_0
